# ikigai-cli

./: .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.cargo/: config.toml.example
.github/workflows/: ci.yml
crates/ikigai-cli/: Cargo.toml  README.md
crates/ikigai-cli/src/: clipboard.rs  config.rs  engine.rs  main.rs  quic.rs  repl.rs  route_load.rs  tui.rs
crates/ikigai-email/: Cargo.toml
crates/ikigai-email/src/: lib.rs
crates/ikigai-embedded/: Cargo.toml  README.md
crates/ikigai-embedded/src/: decide.rs  lib.rs
crates/ikigai-engine/: Cargo.toml  README.md
crates/ikigai-engine/src/: config.rs  engine.rs  lib.rs
crates/ikigai-intake/: Cargo.toml
crates/ikigai-intake/src/: lib.rs
crates/ikigai-intray/: Cargo.toml
crates/ikigai-intray/src/: lib.rs
crates/ikigai-ipc/: Cargo.toml  README.md
crates/ikigai-ipc/src/: lib.rs
crates/ikigai-mcp/: Cargo.toml  README.md
crates/ikigai-mcp/src/: lib.rs  server.rs
crates/ikigai-quic/: Cargo.toml  README.md
crates/ikigai-quic/src/: lib.rs
crates/ikigai-resolve/: Cargo.toml  README.md
crates/ikigai-resolve/src/: lib.rs
crates/ikigai-scheduler/: Cargo.toml  README.md
crates/ikigai-scheduler/src/: lib.rs
crates/ikigai-time/: Cargo.toml
crates/ikigai-time/src/: lib.rs
crates/ikigai-tz/: Cargo.toml
crates/ikigai-tz/src/: lib.rs
crates/ikigai-view/: Cargo.toml
crates/ikigai-view/src/: lib.rs  tests.rs
crates/ikigai-web/: Cargo.toml  README.md
crates/ikigai-web/src/: lib.rs
crates/ikigai-wire/: Cargo.toml  README.md
crates/ikigai-wire/src/: lib.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: lib.rs  wire.rs
crates/transport-embedded/: Cargo.toml
crates/transport-embedded/src/: lib.rs
crates/transport-ipc/: Cargo.toml
crates/transport-ipc/src/: lib.rs
crates/transport-quic/: Cargo.toml
crates/transport-quic/src/: lib.rs
demos/: grants.json.example  mcp-handshake.sh  text-pipelines.sh
docs/: module-format-design.md  mount-over-wire-design.md  scheduler-design.md
