[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-cli"
homepage = "https://github.com/ikigai-rs/ikigai-cli"

[workspace.dependencies]
# The released kernel, consumed from crates.io. For local cross-repo development
# against a sibling checkout, use .cargo/config.toml (see .cargo/config.toml.example).
ikigai-core = "0.1.15" # compose retired from builtins (lives in ikigai-fn); Invocation::fan_out stays
ikigai-vocab = "0.1"
# The reusable function library, linked in as a published module crate.
ikigai-fn = "0.1.1" # compose fans `$a{}` markers out via Invocation::fan_out
# Personal contexts (urn:personal:*), macOS-backed, linked as a published module.
ikigai-personal = "0.1.0"
# Capability-gated file/store module, linked as a published module crate.
ikigai-fs = "0.1.2"
# Outbound HTTP-client module (urn:httpGet…), linked as a published module crate.
ikigai-http = "0.1.0"
ikigai-resolve = { path = "crates/ikigai-resolve", version = "0.1.1" }
ikigai-wire = { path = "crates/ikigai-wire", version = "0.1.0" }
ikigai-scheduler = { path = "crates/ikigai-scheduler", version = "0.1.3" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
libc = "0.2"
# Native HTTP client for the embedded host's ikigai-http transport. Blocking and
# runtime-free, so it works under the CLI's `futures::block_on` without pulling Tokio.
ureq = "2"
