[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-cli"
homepage = "https://github.com/ikigai-rs/ikigai-cli"

[workspace.dependencies]
# The released kernel, consumed from crates.io. For local cross-repo development
# against a sibling checkout, use .cargo/config.toml (see .cargo/config.toml.example).
ikigai-core = "0.1.22" # EndpointKind/Transreption (transreptor typing in the catalog)
ikigai-vocab = "0.1.22" # ikigai_vocab::space() — urn:ikigai:vocab resource
# The reusable function library, linked in as a published module crate.
ikigai-fn = "0.1.1" # compose fans `$a{}` markers out via Invocation::fan_out
# Personal contexts (urn:personal:*), macOS-backed, linked as a published module.
ikigai-personal = "0.1.0"
# Capability-gated file/store module, linked as a published module crate.
ikigai-fs = "0.1.2"
# Outbound HTTP-client module (urn:httpGet…), linked as a published module crate.
ikigai-http = "0.1.0"
# Interactive runbook module (urn:runbook:*) — Linked Data demo tab since 0.1.3;
# 0.1.5 adds the JSON-LD demo tab (expand/flatten/compact), which works here because
# the CLI links its own pipe-fixed ikigai-engine.
ikigai-runbook = "0.1.6"
# Linked Data toolkit (separate ikigai-linkeddata repo): RDF transreption + SPARQL.
ikigai-rdf = "0.1.0"
ikigai-sparql = "0.1.0"
# Content sniffing + sniff-and-dispatch (urn:sniff, urn:transrept:auto).
ikigai-sniff = "0.1.1"
# XSLT transform module (urn:xslt:transform) — linked natively (no download cost in a
# native binary; the dynamic/lazy form is a browser/WASI concern).
ikigai-xslt = "0.1.0"
# JSON-LD operators (urn:jsonld:expand/compact/flatten) — linked natively (the heavy
# json-ld tree is a browser-wasm concern, lazy-loaded there; native links it directly).
ikigai-jsonld = "0.1.1"
# Sibling workspace crates pinned to the current release: a published crate must
# require its siblings at this version too, so the lockstep release publishes in
# dependency order (resolve → wire → engine → …) and a crate can never build against
# an older, incompatible sibling on crates.io.
ikigai-resolve = { path = "crates/ikigai-resolve", version = "0.1.7" }
ikigai-wire = { path = "crates/ikigai-wire", version = "0.1.7" }
ikigai-scheduler = { path = "crates/ikigai-scheduler", version = "0.1.7" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
libc = "0.2"
# Native HTTP client for the embedded host's ikigai-http transport. Blocking and
# runtime-free, so it works under the CLI's `futures::block_on` without pulling Tokio.
ureq = "2"
