[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-cli"
homepage = "https://github.com/ikigai-rs/ikigai-cli"

[workspace.dependencies]
# The released kernel, consumed from crates.io. For local cross-repo development
# against a sibling checkout, use .cargo/config.toml (see .cargo/config.toml.example).
ikigai-core = "0.1.47" # + Error::NotFound (ikigai-web maps it to HTTP 404)
ikigai-vocab = "0.1.33" # + event terms (ik:calendar/allDay/alert) + LLM trait terms
# The reusable function library, linked in as a published module crate.
ikigai-fn = "0.1.2" # + urn:fn:conditional (the lazy branch: if/then/else are URIs)
# Personal contexts (urn:personal:*), macOS-backed, linked as a published module.
ikigai-personal = "0.6.0" # calendar reads scoped to the configured view (Brian-Busy); busy/free honored
# Capability-gated file/store module, linked as a published module crate.
ikigai-fs = "0.1.4" # 0.1.4 = typed Error::Denied for capability denials
# Outbound HTTP-client module (urn:httpGet…), linked as a published module crate.
ikigai-http = "0.1.4" # 0.1.4 = typed Error::Denied for the host-ACL denial
# Interactive runbook module (urn:runbook:*) — Linked Data demo tab since 0.1.3;
# 0.1.5 adds the JSON-LD demo tab (expand/flatten/compact), which works here because
# the CLI links its own pipe-fixed ikigai-engine.
ikigai-runbook = "0.1.10" # Basics: urn:fn:conditional branch (lazy) example
# Linked Data toolkit (separate ikigai-linkeddata repo): RDF transreption + SPARQL.
ikigai-rdf = "0.1.3" # + urn:rdf:union / urn:rdf:diff (graph set ops, with= carries ?k=v args)
ikigai-sparql = "0.1.5" # 0.1.5 = unique id per query form (no 4× tool collision) + optional graph/as
# Content sniffing + sniff-and-dispatch (urn:sniff, urn:transrept:auto).
ikigai-sniff = "0.1.1"
# Neutral s-expr foundation: Sexpr datum + urn:sparql:from-sexpr transreptor (text/x-sexpr → SPARQL).
ikigai-sexpr = "0.1.0"
# Signing + verification: urn:sign:sign (cap-gated) / urn:sign:verify (open), Ed25519.
ikigai-sign = "0.1.0"
# Public-key encryption (urn:encrypt:encrypt/decrypt, age/X25519) — the dual of sign.
# Keys resolved through the kernel (urn:secret:<id>.enc). Embedded-only (off the wire).
ikigai-encrypt = "0.1.0"
# Secrets custody: urn:secret:{name} (cap-gated read) + urn:secret:generate/unlock
# (Ed25519 keygen + Touch ID), macOS Keychain backend. Owner-only, not served.
ikigai-secret = "0.1.2"
# XSLT transform module (urn:xslt:transform) — linked natively (no download cost in a
# native binary; the dynamic/lazy form is a browser/WASI concern).
ikigai-xslt = "0.1.0"
# JSON-LD operators (urn:jsonld:expand/compact/flatten) — linked natively (the heavy
# json-ld tree is a browser-wasm concern, lazy-loaded there; native links it directly).
ikigai-jsonld = "0.1.1"
# SHACL validation (urn:shacl:validate) — rudof's validator is native-only (gated off wasm),
# so it's linked natively here; the browser serves the same resource via shacl-engine (JS).
ikigai-shacl = "0.1.0"
# The org-mode agenda (urn:org:agenda:{period}) — reads org files through the
# kernel (urn:orgfile:*) and speaks the same skolemized event graph as the
# calendar, so the two union/diff as graphs.
ikigai-org = "0.1.3" # caret picks up 0.1.4 (cross-midnight fix) once published
# Unix-like text endpoints (urn:text:wc/head/tail/grep/sort/uniq/nl/rev) — the
# first satellite-built module; pure text, wasm-clean, ArgSpec showcase.
ikigai-text = "0.1.0"
# Semantic-CMS transreptors (urn:cms:*): personal content (org bookmarks/notes,
# library metadata) as one RDF graph on the dc:subject tag axis.
ikigai-cms = "0.1.1" # 0.1.1 = stitch wrapped bookmark titles (no dropped entries)
# Dev-tooling seam: git/gh/cargo as resources (urn:system:exec, urn:repo:*).
ikigai-repo = "0.1.2" # 0.1.2 = typed Error::Denied for capability denials
# Steel-backed Lisp evaluator (urn:lisp:eval): code is a resource, builtins ARE the
# cap-scoped kernel verbs. Embedded-only (arbitrary code); gated by urn:cap:lisp.
ikigai-lisp = "0.1.0"
# LLM inference (urn:llm:ask + urn:llm:<provider>:ask + urn:llm:config): a facade grammar
# over pluggable backends. OpenAI-compatible REST backend (Ollama/vLLM/llama.cpp/mlx_lm).
ikigai-llm = "0.7.0" # installed: smallest-first with sizes (host co-load budgeting)
# The org⊕calendar consolidated-view (Brian-Busy) derivation — a workspace-local
# composition crate that reconciles personal/org/rdf THROUGH the kernel. Not
# published (no version pin); the CLI installs it from this path only.
ikigai-view = { path = "crates/ikigai-view" }
# Timezone conversion (urn:tz:convert, IANA/DST-correct) + a zoned clock (urn:tz:now).
# Workspace-local, not published; keeps the tzdata dependency out of the lean modules.
ikigai-tz = { path = "crates/ikigai-tz" }
# The intray / tuplespace (urn:space:{name}: out/rd). Workspace-local, not published;
# a dir-backed space under file_root. The scheduling booking-inbox drops into it.
ikigai-intray = { path = "crates/ikigai-intray" }
# Sibling workspace crates pinned to the current release: a published crate must
# require its siblings at this version too, so the lockstep release publishes in
# dependency order (resolve → wire → engine → …) and a crate can never build against
# an older, incompatible sibling on crates.io.
ikigai-resolve = { path = "crates/ikigai-resolve", version = "0.1.9" }
ikigai-wire = { path = "crates/ikigai-wire", version = "0.1.9" }
ikigai-scheduler = { path = "crates/ikigai-scheduler", version = "0.1.9" }
ikigai-time = { path = "crates/ikigai-time", version = "0.1.11" }
# Inbound HTTP transport (method↔verb, path↔iri, cap-per-request). A published
# transport like ipc/quic/mcp; only the `web`-featured CLI pulls it (and Tokio).
ikigai-web = { path = "crates/ikigai-web", version = "0.1.9" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
libc = "0.2"
# Native HTTP client for the embedded host's ikigai-http transport. Blocking and
# runtime-free, so it works under the CLI's `futures::block_on` without pulling Tokio.
ureq = "2"
