[package]
name = "ikigai-cli"
description = "ikigai — a REPL client for resource-resolution kernels (native + WebAssembly)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ikigai"
path = "src/main.rs"

[features]
default = ["embedded", "ipc"]
embedded = ["dep:transport-embedded"]
ipc = ["dep:transport-ipc"]   # Unix only; the dep is empty elsewhere
quic = ["dep:transport-quic"] # opt-in; pulls quinn/rustls/tokio

[dependencies]
ikigai-core = { workspace = true }
transport-core = { workspace = true }
serde_json = { workspace = true }
transport-embedded = { path = "../transport-embedded", optional = true }
transport-ipc = { path = "../transport-ipc", optional = true }
transport-quic = { path = "../transport-quic", optional = true }

# The full-screen TUI is native-only (crossterm). The browser frontend (ratzilla)
# lands in a later slice; on wasm the binary falls back to the line REPL.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
