[package]
name = "ikigai-cli"
description = "ikigai — a REPL client for resource-resolution kernels (native + WebAssembly)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ikigai"
path = "src/main.rs"

[features]
default = ["embedded", "ipc"]
embedded = ["dep:ikigai-embedded"]
ipc = ["dep:ikigai-ipc"]   # Unix only; the dep is empty elsewhere
quic = ["dep:ikigai-quic"] # opt-in; pulls quinn/rustls/tokio

[dependencies]
ikigai-core = { workspace = true }
ikigai-engine = { path = "../ikigai-engine" }
ikigai-resolve = { workspace = true }
serde_json = { workspace = true }
ikigai-embedded = { path = "../ikigai-embedded", optional = true }
ikigai-ipc = { path = "../ikigai-ipc", optional = true }
ikigai-quic = { path = "../ikigai-quic", optional = true }

# The full-screen TUI is native-only (crossterm). The browser frontend (ratzilla)
# lands in a later slice; on wasm the binary falls back to the line REPL.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
