[package]
name = "ikigai-embedded"
description = "In-process transport: composes a kernel directly in the host process."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
ikigai-vocab = { workspace = true }
ikigai-fn = { workspace = true }
ikigai-personal = { workspace = true }
ikigai-fs = { workspace = true }
ikigai-http = { workspace = true }
ikigai-runbook = { workspace = true }
ikigai-rdf = { workspace = true }
ikigai-sparql = { workspace = true }
ikigai-xslt = { workspace = true }
ikigai-scheduler = { workspace = true }
serde_json = { workspace = true }
# Filesystem watching — the first external golden-thread freshness source: an
# out-of-band change to a workspace file cuts its thread so cached reads recompute.
notify = "6"
# Native HTTP client backing the ikigai-http transport (blocking, runtime-free, so
# it works under the CLI's `futures::block_on` without pulling Tokio).
ureq = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
futures = { workspace = true }
