[package]
name = "ikigai-embedded"
description = "In-process transport: composes a kernel directly in the host process."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
ikigai-vocab = { workspace = true }
ikigai-fn = { workspace = true }
ikigai-personal = { workspace = true }
ikigai-org = { workspace = true }
# The consolidated-view (Brian-Busy) derivation, lifted out of this host crate into
# its own focused, independently-tested crate. This host merely binds its endpoints
# (urn:view:derive[:tick], urn:view:ingest), passing the resolved calendar config.
ikigai-view = { workspace = true }
ikigai-text = { workspace = true }
ikigai-cms = { workspace = true }
ikigai-repo = { workspace = true }
# Steel-backed Lisp evaluator (urn:lisp:eval) — bound into the embedded/native
# host space only (it evaluates arbitrary code), cap-gated by urn:cap:lisp.
ikigai-lisp = { workspace = true }
ikigai-fs = { workspace = true }
ikigai-http = { workspace = true }
ikigai-runbook = { workspace = true }
ikigai-rdf = { workspace = true }
ikigai-sparql = { workspace = true }
ikigai-sniff = { workspace = true }
ikigai-sexpr = { workspace = true }
ikigai-sign = { workspace = true }
ikigai-xslt = { workspace = true }
ikigai-jsonld = { workspace = true }
ikigai-shacl = { workspace = true }
# LLM inference (urn:llm:ask + urn:llm:<provider>:ask), on the native ureq transport.
ikigai-llm = { workspace = true }
# Parse the LLM annotation graph (IKIGAI_LLM_ANNOTATIONS, Turtle) into the
# (subject, predicate, object) facts Registry::apply_annotations consumes. The
# same pure-Rust Oxigraph crates ikigai-rdf already pulls into this tree.
oxrdf = "0.3"
oxrdfio = "0.2"
ikigai-scheduler = { workspace = true }
# The time transport (urn:time:schedule/cancel/jobs): fires a kernel resource-request
# on a timer. Bound in root_space; its kernel handle is installed in watched_kernel.
ikigai-time = { workspace = true }
# Needed to coerce the built kernel to `dyn Resolver` when installing it on the time
# registry (ikigai-core doesn't re-export the Resolver trait).
ikigai-resolve = { workspace = true }
serde_json = { workspace = true }
# Local time (OS timezone) for urn:time:now (the nav/REPL clock). `clock` feature =
# Local::now; default-features off to skip the unused parsing/serde surface.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Filesystem watching — the first external golden-thread freshness source: an
# out-of-band change to a workspace file cuts its thread so cached reads recompute.
notify = "6"
# Native HTTP client backing the ikigai-http transport (blocking, runtime-free, so
# it works under the CLI's `futures::block_on` without pulling Tokio).
ureq = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
futures = { workspace = true }
