[package]
name = "ikigai-engine"
description = "Renderer-agnostic REPL engine for ikigai: parses a request line, drives a Backend, and reports the result as an Action. Shared by the CLI and the browser frontend."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
ikigai-resolve = { workspace = true }
serde_json = { workspace = true }
# block_on + join_all for the parallel fork/map path. Only block_on/join_all are
# used (no ThreadPool), so the engine still compiles to wasm; without an injected
# spawner the parallel path is never taken (sequential fallback).
futures = { workspace = true }

[dev-dependencies]
# End-to-end `sink`/`source`/`cap` tests mount the real file module.
ikigai-fs = { workspace = true }
