[package]
name = "ikigai-intray"
description = "The intray as a tuplespace: urn:space:{name} — Sink drops a tuple (out), Source lists/reads/filters (rd), Delete atomically takes one (in), associative match via SPARQL ASK. A physical, capability-gated space; later slices add the reactive engine and encrypt-on-drop."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
ikigai-core = { workspace = true }
# The reactor fires a space's handler by resolving it through a kernel handle — held
# behind the Resolver trait (like the time transport's JobRegistry), installed after the
# kernel is built. The handler runs under the reactor's OWN configured capability, never
# the dropper's.
ikigai-resolve = { workspace = true }
# The live watcher fires the reactor on each drop — the same fs-notify the embedded host
# already uses for golden-thread freshness. Native/embedded-only, like the rest of this crate.
notify = "6"
async-trait = "0.1"
# Content-addressed tuple ids (same hash family core uses for content addressing).
blake3 = "1"
# Associative match: a tuple's graph is loaded and tested against a SPARQL ASK. Already
# in the build graph via ikigai-sparql; the space is embedded-only (publish=false) so the
# heavy Oxigraph dependency is acceptable here.
oxigraph = "0.5"

[dev-dependencies]
futures = { workspace = true }
