[package]
name = "ikigai-ipc"
description = "Unix-domain-socket IPC transport to a local kernel server."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
ikigai-resolve = { workspace = true }
ikigai-wire = { workspace = true }
libc = { workspace = true }
