[package]
name = "ikigai-resolve"
description = "The Resolver seam the ikigai REPL engine drives: issue a request against a kernel — local or remote — and report how the cache served it."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
# Deserialize a mounted endpoint's JSON Meta face into a Description, so the engine
# can route named args by the *remote* endpoint's own contract.
serde_json = { workspace = true }
# Async `issue_as_async` on the Resolver trait, so the engine can drive a stage on
# the scheduler (a spawned branch parks rather than blocking a worker).
async-trait = "0.1"
