[package]
name = "ikigai-scheduler"
description = "Async work scheduler for the ikigai kernel: a pluggable executor (single-thread or a configurable threadpool) that drives the runtime-free kernel's futures, parking — not blocking — on awaits."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Runs arbitrary futures on `futures` (no Tokio) so the scheduler stays a thin
# host-side seam. ikigai-core only for the `Spawner` trait it implements — the kernel
# injects this as its concurrent-fan-out executor (Kernel::into_scheduled).
ikigai-core = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
