[package]
name = "ikigai-wire"
description = "The ikigai IPC/QUIC wire protocol: length-prefixed postcard Call/Reply messages mirroring the Resolver surface."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
ikigai-resolve = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
