[package]
name = "transport-core"
description = "The Backend seam the REPL drives — a local or remote kernel — plus shared wire types."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
