[package]
name = "transport-ipc"
description = "Unix-domain-socket IPC transport to a local kernel server."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ikigai-core = { workspace = true }
transport-core = { workspace = true }
libc = { workspace = true }
